--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,9 +4,14 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
+  name = "About"
   url = "#about"
   weight = 10
+
+[[main]]
+  name = "Team"
+  url = "#people"
+  weight = 15
 
 [[main]]
   name = "Posts"
