--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -112,7 +112,7 @@ coordinates = {latitude = "51.470339", longitude = "-0.089832"}
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "github", icon_pack = "fab", name = "", link = "https://github.com/code-neuro"},
+  {icon = "github", icon_pack = "fab", name = "GitHub Page", link = "https://github.com/code-neuro"},
   # {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
   ]
