--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,7 +93,7 @@ phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "16, De Crespigny Park", city = "London", region = "", postcode = "SE5 8AF", country = "United Kingdom", country_code = "UK"}
+# address = {street = "16, De Crespigny Park", city = "London", region = "", postcode = "SE5 8AF", country = "United Kingdom", country_code = "UK"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
@@ -113,8 +113,6 @@ coordinates = {latitude = "51.470339", longitude = "-0.089832"}
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
   {icon = "github", icon_pack = "fab", name = "GitHub Page", link = "https://github.com/code-neuro"},
-  # {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
-  # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
   ]
 
 ############################
@@ -125,7 +123,7 @@ contact_links = [
 sharing_image = ""
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = "dafnisbatalle"
+twitter = ""
 
 ############################
 ## Regional Settings
