--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -269,8 +269,8 @@ plugins_js  = []
   #   1: Google Maps
   #   2: OpenStreetMap (Mapnik)
   #   3: OpenStreetMap (Mapbox)
-  engine = 1
-  api_key = "AIzaSyDx70VfnNaFzkO5NrT0PBykcCEod8QQAzA"
+  engine = 3
+  api_key = ""
   zoom = 15
 
 ############################
