add alumni to menu

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,14 +19,19 @@
   weight = 30
 
 [[main]]
+    name = "Alumni"
+    url = "#alumni"
+    weight = 40
+
+[[main]]
   name = "Publications"
   url = "#publications"
-  weight = 40
+  weight = 60
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
